--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</nav>
     <div align="center">
 	<img src="https://wallpapers.com/images/hd/plain-pastel-color-iacejmtawhhuhc4q.jpg" alt="imagen de ejemplo" width="500px" height="500px">
-    <img src="C:\Users\Grupo 6.1\Documents\proyecto parcial 2\imagenes\publicidad de empresa.jpg" alt="publicidad"  width="500px" height="500px">
+    <img src="imagenes\publicidad de empresa.jpg" alt="publicidad"  width="500px" height="500px">
     </div>
 <style>
 		nav ul { list-style: none; padding:0; }
